Bug 90090 - "reject devices with a min == max axis range" causes my mouse to stop working
Summary: "reject devices with a min == max axis range" causes my mouse to stop working
Status: RESOLVED FIXED
Alias: None
Product: Wayland
Classification: Unclassified
Component: libinput (show other bugs)
Version: 1.3.0
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: Peter Hutterer
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks: 90107
  Show dependency treegraph
 
Reported: 2015-04-18 20:38 UTC by frostidaho
Modified: 2015-04-21 01:51 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments
Output from evemu-describe (6.98 KB, text/plain)
2015-04-18 20:38 UTC, frostidaho
Details

Description frostidaho 2015-04-18 20:38:07 UTC
Created attachment 115182 [details]
Output from evemu-describe

After upgrading to libinput 0.13 My "Roccat Kone XTD" mouse stopped working. From the logs there was some complaint about a min == max axis range, which leads me to belive that the following commit is the source of my problem:

http://cgit.freedesktop.org/wayland/libinput/commit/?id=0e262e55bc5321eff4619634b9ed3c5b99f9db99

After I removed libinput-0.13 and installed 0.12 my mouse again worked fine. Attached is the output from running evemu-describe on the mouse-aspect event file (/dev/input/event*) associated with my "Roccat Kone XTD".
Comment 2 Peter Hutterer 2015-04-21 01:51:00 UTC
commit 776bf4938dc4f3228fbfb45a5df4d18639b146de
Author: Peter Hutterer <peter.hutterer@who-t.net>
Date:   Fri Apr 17 15:59:36 2015 +1000

    evdev: accept but disable ABS_MISC and above for min/max == 0


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.