test/litest.c
@@ -100,6 +100,7 @@ extern struct litest_test_device litest_protocol_a_screen;
 extern struct litest_test_device litest_wacom_finger_device;
 extern struct litest_test_device litest_keyboard_blackwidow_device;
 extern struct litest_test_device litest_wheel_only_device;
+extern struct litest_test_device litest_mouse_roccat_device;
 
 struct litest_test_device* devices[] = {
 	&litest_synaptics_clickpad_device,
@@ -121,6 +122,7 @@ struct litest_test_device* devices[] = {
 	&litest_wacom_finger_device,
 	&litest_keyboard_blackwidow_device,
 	&litest_wheel_only_device,
+	&litest_mouse_roccat_device,
 	NULL,
 };
 
